DFR-467: Fortify Setup